Added Assimp, some custom classes, basic shaders and cose for a test render

--- a/3DModelViewer.vcxproj
+++ b/3DModelViewer.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\imconfig.h" />
     <ClInclude Include="include\imgui.h" />
     <ClInclude Include="include\imgui_impl_glfw.h" />
@@ -37,7 +38,15 @@
     <ClInclude Include="include\imstb_rectpack.h" />
     <ClInclude Include="include\imstb_textedit.h" />
     <ClInclude Include="include\imstb_truetype.h" />
+    <ClInclude Include="include\Mesh.h" />
+    <ClInclude Include="include\Model.h" />
+    <ClInclude Include="include\ShaderProgram.h" />
     <ClInclude Include="include\stb_image.h" />
+    <ClInclude Include="include\Texture2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\main.fs" />
+    <None Include="shaders\main.vs" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
