--- a/3DModelViewer.vcxproj.filters
+++ b/3DModelViewer.vcxproj.filters
@@ -68,5 +68,28 @@
     <ClInclude Include="include\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ShaderProgram.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Texture2D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\main.fs">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="shaders\main.vs">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
