--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=475,409
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,-1
+Pos=410,48
 Size=1072,991
 Collapsed=0
 
@@ -84,7 +84,22 @@ Size=339,833
 Collapsed=0
 
 [Window][Scene Window]
-Pos=295,214
-Size=767,551
+Pos=100,100
+Size=1920,1080
+Collapsed=0
+
+[Window][Scene Window 2]
+Pos=225,311
+Size=655,477
+Collapsed=0
+
+[Window][Options]
+Pos=0,0
+Size=498,1080
+Collapsed=0
+
+[Window][Model]
+Pos=498,0
+Size=1422,1080
 Collapsed=0
 
