Added File Dialogue box, scrapped camera in favour of direct manipulation of model matrix

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# My stuff
+defaultModel/
+
 # User-specific files
 *.rsuser
 *.suo
