Decided to handle only PBR, albedo map switching working.

--- a/3DModelViewer.vcxproj
+++ b/3DModelViewer.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="source\imgui_impl_opengl3.cpp" />
     <ClCompile Include="source\imgui_widgets.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\stb_imageLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Camera.h" />
