--- a/3DModelViewer.vcxproj.filters
+++ b/3DModelViewer.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="source\imgui_impl_opengl3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\stb_imageLoader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\imconfig.h">
