--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,9 @@ Size=475,409
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=526,33
+Pos=650,78
 Size=1072,991
-Collapsed=0
+Collapsed=1
 
 [Window][Example: Documents]
 Pos=32,19
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][Example: Auto-resizing window]
 Pos=121,144
-Size=653,437
+Size=798,417
 Collapsed=0
 
 [Window][Example: Constrained Resize]
@@ -101,5 +101,35 @@ Collapsed=0
 [Window][Model]
 Pos=289,0
 Size=1631,1080
+Collapsed=0
+
+[Window][Phong Model Parameters]
+Pos=60,60
+Size=281,67
+Collapsed=0
+
+[Window][Test]
+Pos=386,327
+Size=895,459
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][phong parameters]
+Pos=60,60
+Size=499,392
+Collapsed=0
+
+[Window][Blinn-Phong parameters]
+Pos=137,263
+Size=600,312
+Collapsed=0
+
+[Window][PBR parameters]
+Pos=107,90
+Size=690,453
 Collapsed=0
 
