--- a/3DModelViewer.vcxproj
+++ b/3DModelViewer.vcxproj
@@ -30,7 +30,6 @@
     <ClCompile Include="source\stb_imageLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\imconfig.h" />
     <ClInclude Include="include\imgui.h" />
     <ClInclude Include="include\imgui_impl_glfw.h" />
@@ -39,11 +38,11 @@
     <ClInclude Include="include\imstb_rectpack.h" />
     <ClInclude Include="include\imstb_textedit.h" />
     <ClInclude Include="include\imstb_truetype.h" />
+    <ClInclude Include="include\Light.h" />
     <ClInclude Include="include\Mesh.h" />
     <ClInclude Include="include\Model.h" />
     <ClInclude Include="include\ShaderProgram.h" />
     <ClInclude Include="include\stb_image.h" />
-    <ClInclude Include="include\Texture2D.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\main.fs" />
