Added ability to create and modify lights

--- a/imgui.ini
+++ b/imgui.ini
@@ -139,7 +139,12 @@ Size=231,67
 Collapsed=0
 
 [Window][Modifying light]
-Pos=243,244
-Size=420,170
+Pos=114,323
+Size=545,426
+Collapsed=0
+
+[Window][Adding Light]
+Pos=62,167
+Size=545,463
 Collapsed=0
 
