Added directional light support

--- a/imgui.ini
+++ b/imgui.ini
@@ -148,3 +148,13 @@ Pos=62,167
 Size=545,463
 Collapsed=0
 
+[Window][Modifying point light]
+Pos=60,60
+Size=545,463
+Collapsed=0
+
+[Window][Modifying directional light]
+Pos=60,60
+Size=406,296
+Collapsed=0
+
