Added ability to delete spotlights and change control sensitivities from GUI

--- a/imgui.ini
+++ b/imgui.ini
@@ -145,21 +145,26 @@ Collapsed=0
 
 [Window][Adding Light]
 Pos=62,167
-Size=545,463
+Size=546,463
 Collapsed=0
 
 [Window][Modifying point light]
 Pos=60,60
-Size=545,463
+Size=546,463
 Collapsed=0
 
 [Window][Modifying directional light]
 Pos=60,60
-Size=406,296
+Size=407,296
 Collapsed=0
 
 [Window][Modifying spotlight]
 Pos=61,122
 Size=546,560
+Collapsed=0
+
+[Window][Modifying control sensitivies]
+Pos=60,60
+Size=660,139
 Collapsed=0
 
